function correction and preparation of verification of entered data

--- a/Pavliclab2/Pavliclab2.vcxproj.filters
+++ b/Pavliclab2/Pavliclab2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Pavliclab2.cpp">
+    <ClCompile Include="AS2305Pavlichenkolab1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
