--- a/Pavliclab2/Pavliclab2.vcxproj
+++ b/Pavliclab2/Pavliclab2.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{828342f2-e91a-48d7-8548-b5320428ff92}</ProjectGuid>
     <RootNamespace>Pavliclab2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>AS2305Pavlichenkolab1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Pavliclab2.cpp" />
+    <ClCompile Include="AS2305Pavlichenkolab1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
