cin and cout for class CS

--- a/Pavliclab2/Pavliclab2.vcxproj.filters
+++ b/Pavliclab2/Pavliclab2.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="CS.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
